# mcpxpy

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt
mcpxpy/: __init__.py  exceptions.py  structs.py  wrapper.py
